:sparkles: Adicionado autenticação

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,16 @@
 NODE_ENV=
+
+#docker
 APP_NAME=
 APP_IMAGE=
 API_URL=
+
+#stripe
+STRIPE_API_KEY=
+
+#github
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+#faunaDb
+FAUNADB_KEY=
