--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "dotenv-safe": "^8.2.0",
+    "faunadb": "^4.3.0",
     "next": "^10.2.3",
+    "next-auth": "^3.27.3",
     "next-compose-plugins": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "stripe": "^8.165.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/react": "^17.0.14",
     "@types/styled-components": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
