--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,9 @@ APP_IMAGE=
 API_URL=
 
 #stripe
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
 STRIPE_API_KEY=
+STRIPE_WEBHOOK_SECRET=
 
 #github
 GITHUB_CLIENT_ID=
@@ -14,3 +16,7 @@ GITHUB_CLIENT_SECRET=
 
 #faunaDb
 FAUNADB_KEY=
+
+#PRISMIC
+PRISMIC_ACCESS_TOKEN=
+PRISMIC_ENDPOINT=
