--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "format": "prettier --check 'src/*/*.{js,ts,tsx}'"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
+    "@stripe/stripe-js": "^1.16.0",
+    "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "dotenv-safe": "^8.2.0",
     "faunadb": "^4.3.0",
     "next": "^10.2.3",
     "next-auth": "^3.27.3",
     "next-compose-plugins": "^2.2.1",
+    "prismic-dom": "^2.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -26,6 +30,7 @@
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.14",
     "@types/styled-components": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
