--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ API_URL=
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
 STRIPE_API_KEY=
 STRIPE_WEBHOOK_SECRET=
+STRIPE_SUCCESS_URL=
+STRIPE_CANCEL_URL=
 
 #github
 GITHUB_CLIENT_ID=
@@ -17,6 +19,6 @@ GITHUB_CLIENT_SECRET=
 #faunaDb
 FAUNADB_KEY=
 
-#PRISMIC
+#Prismic CMS
 PRISMIC_ACCESS_TOKEN=
 PRISMIC_ENDPOINT=
